commiting before rebasing

--- a/browser/js/cart/cart-view.html
+++ b/browser/js/cart/cart-view.html
@@ -14,11 +14,11 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="item in cart.items track by $index">
-            <td><span ng-click="remove(item.product._id)" ui-sref="cart"class="glyphicon glyphicon-remove"></span></td>
+            <td><a><span ng-click="remove(item.product._id)" ui-sref="cart"class="glyphicon glyphicon-remove"></span></a></td>
 
             <td>{{item.product.name}}</td>
             <td>{{item.product.type}}</td>
-            <td><span class="glyphicon glyphicon-minus" ng-click="update(item.product._id, -1)"></span>
+            <td><span class="glyphicon glyphicon-minus"  ng-click="update(item.product._id, -1)"></span>
             	&nbsp;&nbsp;{{item.quantity | number}}&nbsp;&nbsp;
                 <span class="glyphicon glyphicon-plus" ng-click="update(item.product._id, 1)"></span></td>
             <td>{{ item.unitPrice | currency}}</td>
