--- a/browser/js/checkout/checkout.html
+++ b/browser/js/checkout/checkout.html
@@ -1,14 +1,14 @@
 <div class="container">
-  <div class="row">
+<!--   <div class="row">
     <div class="col-md-3">Confirm</div>
     <div class="col-md-3">Address</div>
     <div class="col-md-3">Payment</div>
     <div class="col-md-3">Complete</div>
-  </div>
-  <h3>Checkout: {{ step }}</h3>
+  </div> -->
+  <h3>Checkout: {{ step | uppercase }}</h3>
   <pre>{{ user | json}}</pre>
   <div class="row">
-      <div class="col-md-4">
+      <div>
       <order-summary order="order"></order-summary>
     </div>
 
@@ -35,7 +35,7 @@
     </div>
 
     <!-- shipping form -->
-    <div ng-show="step === 'shipping' || u">
+    <div ng-show="step === 'address'">
       <address-form></address-form>
     </div>
     
