--- a/browser/js/checkout/order.summary.html
+++ b/browser/js/checkout/order.summary.html
@@ -1,7 +1,7 @@
-    <div class="col-md-4">
+    <div class="col-md-4 order-summary">
        <h4>Your Order</h4>
-       <p><b>Subtotal:</b> {{ order.total / 100 | currency }} </p>
-       <p><b>Shipping:</b> <span>Free!</span></p>
-       <p>Total: {{ order.total / 100 | currency }} </p>
-       <button>Edit Cart</button>
+       <p><b>Subtotal:</b> {{ order.total | currency }} </p>
+       <p><b>Shipping:</b> <span class="free">Free!</span></p>
+       <p>Total: {{ order.total | currency }} </p>
+       <button ui-sref="cart">Edit Cart</button>
     </div>
