--- a/browser/js/reviews/reviews.html
+++ b/browser/js/reviews/reviews.html
@@ -1,4 +1,4 @@
-<div class="product-container">
+<div class="well">
     <div>
         <h1>Review List</h1>
         <h2>{{product.name}}</h2>
@@ -9,3 +9,4 @@
             <!--<a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a></li>-->
         </div>
     </div>
+</div>
