--- a/browser/js/products/detail/product.detail.html
+++ b/browser/js/products/detail/product.detail.html
@@ -19,30 +19,29 @@
 <!--</div>-->
 
 <div class="container">
-
-
-
-            <div class="thumbnail">
-                <img class="img-responsive" src="{{product.image}}" alt="product image">
-                <div class="caption-full">
-                    <h4 class="pull-right">{{product.price}}</h4>
-                    <h4><a href="#">{{product.name}}</a>
-                    </h4>
-                    <p>{{product.description}}</p>
-                    <p>Learn More About This Product's History
-                        <strong><a href="{{product.source}}">here</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-                <div class="ratings">
-                    <p class="pull-right">Reviews</p>
-                    <div class="well" ng-repeat = "review in product.reviews">-->
-                        <review-list review = "review" readonly="rating.isReadOnly"></review-list>
-                    </div>
-                    </p>
-                </div>
-            </div>
-
-
-
-
+    <div class="thumbnail">
+        <img class="img-responsive" src="{{product.image[0]}}" alt="product image">
+        <div class="caption-full">
+            <h4 class="pull-right">{{product.price | currency}}</h4>
+            <h4><a href="#">{{product.name}}</a>
+            </h4>
+            <p>{{product.description}}</p>
+            <p>Learn More About This Product's History
+                <strong><a href="{{product.source}}">here</a></strong>
+            <form>
+                <button class="btn-submit" type="submit" g-click="update(product._id, QTY)">{{update}}Add to Cart</button>
+                <label for="QTY" >Quantity:</label>
+                <input ng-model='QTY' class="QTY" type="number" id="QTY" name="QTY">
+            </form>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="ratings">
+        <p class="pull-right">Reviews</p>
+        <div  ng-repeat = "review in product.reviews">-->
+            <review-list review = "review" readonly="rating.isReadOnly"></review-list>
+        </div>
+        </p>
+    </div>
 </div>
