--- a/browser/js/checkout/checkout.html
+++ b/browser/js/checkout/checkout.html
@@ -5,7 +5,7 @@
     <div class="col-md-3">Payment</div>
     <div class="col-md-3">Complete</div>
   </div> -->
-  <h3>Checkout: {{ step | uppercase }}</h3>
+  <h3>Checkout: <span class="step">{{ step | uppercase }}</span></h3>
   <pre>{{ user | json}}</pre>
   <div class="row">
       <div>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-md-4" ng-show="step === 'confirm' && !user">
-      <button btn  ng-click="confirmOrder()">Checkout As Guest</button>
+      <button class="co-btn guest" ng-click="confirmOrder()">Checkout As Guest</button>
     </div>
 
     <!-- shipping form -->
