--- a/browser/js/checkout/paymentForm.html
+++ b/browser/js/checkout/paymentForm.html
@@ -2,30 +2,52 @@
 
     <form stripe-form="stripeCallback" name="paymentForm">
       <label for="line1">Name on Card</label>
-      <input type="text" id="name" placeholder="Name on Card" class="form-control" />
+        <input 
+          type="text" 
+          id="name" 
+          placeholder="Name on Card" 
+
+          class="form-control" />
       <label for="line1">Card Number</label>
-      <input ng-model="number" placeholder="Card Number" payments-format="card"
-             payments-validate="card" name="card" class="form-control" />
+      <input 
+        required
+        ng-model="number" 
+        placeholder="Card Number" 
+        payments-format="card"
+        payments-validate="card" 
+        name="card"
+        ng-class="{ 'has-success' : $error.card.$valid }" 
+        class="form-control" />
+        <div class="err" ng-show="paymentForm.card.$invalid && !paymentForm.card.$pristine">
+          <span>Invalid card number!</span>
+        </div>
       <label for="line1">Expiration Date</label>
-      <input ng-model="expiry" placeholder="Expiration" payments-format="expiry"
-             payments-validate="expiry" name="expiry" class="form-control"/>
+      <input 
+        required
+        ng-model="expiry" 
+        placeholder="Expiration" 
+        payments-format="expiry"
+        payments-validate="expiry" 
+        name="expiry" 
+        class="form-control"/>
+        <div class="err" ng-show="paymentForm.expiry.$invalid  && !paymentForm.expiry.$pristine">
+          <span>Invalid expiration date!</span>
+        </div>
       <label for="line1">CVC</label>
-      <input ng-model="cvc" placeholder="CVC" payments-format="cvc"
-             payments-validate="cvc" name="cvc" class="form-control"/>
-      
-      <button type="submit">Submit</button>
+      <input 
+        required
+        ng-model="cvc" 
+        placeholder="CVC" 
+        payments-format="cvc"
+        payments-validate="cvc" 
+        name="cvc" 
+        class="form-control"/>
+        <div class="err" ng-show="paymentForm.cvc.$invalid  && !paymentForm.cvc.$pristine">
+          <span>Invalid CVC!</span>
+        </div>
+      <button class="checkout" ng-hide="paymentForm.$invalid" type="submit">Submit</button>
     </form>
 </div>
-    <div ng-if="form.card.$invalid">
-      Error: invalid card number!
-    </div>
-    <div ng-if="form.expiry.$invalid">
-      Error: invalid expiration date!
-    </div>
-    <div ng-if="form.cvc.$invalid">
-      Error: invalid CVC!
-    </div>
 
-    <pre>{{ number }}</pre>
-    <pre>{{ paymentForm | json}}</pre>
+
 
