--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -40,7 +40,8 @@
 
 <div class="col-md-4 col-xs-12">
   <h2>Connect through a partner</h2>
-    <a href="/auth/google">
-      <button type="submit" class="btn btn-default">Connect via Google</button>
+    <a href="/auth/google" class="btn btn-block btn-social btn-google">
+      <i class="fa fa-google"></i> Sign in with Google
+     <!--  <button type="submit" class="btn btn-default">Connect via Google</button> -->
     </a>
 </div>
