more touch ups to homepage and checkout

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -2,4 +2,5 @@
 
     <fullstack-logo></fullstack-logo>
     <rando-greeting></rando-greeting>
+    <h3>Check out our <a ui-sref="productList" >collection</a></h3>
 </section>
