--- a/browser/js/checkout/addressForms.html
+++ b/browser/js/checkout/addressForms.html
@@ -41,6 +41,7 @@
         class="form-control" 
         id="shippingAddressZip" 
         placeholder="Zip">
+        <input required type="email" class="form-control" id="email" placeholder="Email Address" ng-model="shippingAddress.email">
     </div>
   </form>
 </div>
