--- a/browser/js/accountmgmt/cancelorder.directive.html
+++ b/browser/js/accountmgmt/cancelorder.directive.html
@@ -1,6 +1,6 @@
 <button class="btn btn-danger"
   ng-show="order.status==='created' || order.status==='processing'"
-  ng-click="cancel({id: order._id})"
+  ng-click="cancel(order._id)"
   >
   Cancel Order
 </button>
