--- a/browser/js/cart/cart-view.html
+++ b/browser/js/cart/cart-view.html
@@ -14,8 +14,7 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="item in cart.items track by $index">
-            <td><a><span ng-click="remove(item.product._id)" ui-sref="cart"class="glyphicon glyphicon-remove"></span></a></td>
-
+            <td><span ng-click="remove(item.product._id)" ui-sref="cart" class="glyphicon glyphicon-remove remove-btn"></span></td>
             <td>{{item.product.name}}</td>
             <td>{{item.product.type}}</td>
             <td><span class="glyphicon glyphicon-minus"   ng-click="update(item.product._id, -1)"></span>
@@ -24,7 +23,7 @@
             <td>{{ item.unitPrice | currency}}</td>
             <td>{{ item.unitPrice * item.quantity | currency }}</td>
         </tr>
-		
+
 	</tbody>
 
 	<tfoot>
@@ -39,6 +38,6 @@
 <button ui-sref="checkout({ id: cart._id})">Checkout</button>
 
 <pre>
-	
+
 	{{cart | json}}
 </pre>
