cart remove item if quantity goes below 1

--- a/browser/js/cart/cart-view.html
+++ b/browser/js/cart/cart-view.html
@@ -43,7 +43,7 @@
 </table>
 <button class="checkout" ng-show="cart.items.length > 0" ui-sref="checkout({ id: cart._id})">Checkout</button>
 
-<pre>
+<!-- <pre>
 	
 	{{cart | json}}
-</pre>
+</pre> -->
