--- a/browser/js/accountmgmt/order.view.directive.html
+++ b/browser/js/accountmgmt/order.view.directive.html
@@ -4,15 +4,13 @@
     Order Status (as of {{ order.updated | date }}): {{ order.status | uppercase }}
     <br>
     <cancel-order order=order></cancel-order>
-    <br><br>
-    Total Cost: {{ order.total | currency }}
+    <br>
+    <br> Total Cost: {{ order.total | currency }}
   </div>
 
-  <div class="col-md-6">
-    <ul class="list-group">
-      <li class="list-group-item" ng-repeat="item in order.items">
-        <order-item-detail item=item></order-item-detail>
-      </li>
-    </ul>
-  </div>
+  <ul class="list-group">
+    <li class="list-group-item" ng-repeat="item in order.items">
+      <order-item-detail item=item></order-item-detail>
+    </li>
+  </ul>
 </div>
