--- a/browser/js/products/detail/product.detail.html
+++ b/browser/js/products/detail/product.detail.html
@@ -29,7 +29,7 @@
             <p>Learn More About This Product's History
                 <strong><a href="{{product.source}}">here</a></strong>
             <form>
-                <button class="btn-submit" type="submit" g-click="update(product._id, QTY)">{{update}}Add to Cart</button>
+                <button class="btn-submit" type="submit" ng-click="update(product._id, QTY)">{{update}}Add to Cart</button>
                 <label for="QTY" >Quantity:</label>
                 <input ng-model='QTY' class="QTY" type="number" id="QTY" name="QTY">
             </form>
