dark theme and product touch ups

--- a/browser/js/products/product.list.directive.html
+++ b/browser/js/products/product.list.directive.html
@@ -1,4 +1,4 @@
-<div class="thumbnail">
+<div class="thumbnail product-item">
     <img height=150 style="max-height: 150px; max-width=320px;" src="{{product.image[0]}}" alt="">
     <div class="caption">
         <h4  class="pull-right">{{product.price | currency}} </h4>
