--- a/browser/js/common/directives/fullstack-logo/fullstack-logo.html
+++ b/browser/js/common/directives/fullstack-logo/fullstack-logo.html
@@ -1,2 +1,2 @@
 <!-- <img src="https://jlau-bucket-1.s3.amazonaws.com/uploads/topic/image/42/fullstack.png" /> -->
-<img src="/images/deathstar2.ico" alt="Jawa Trader" />
+<img src="/images/deathstar2.png" alt="Jawa Trader" />
