--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -14,7 +14,7 @@
       <label for="login-password">Password</label>
       <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="signin">Submit</button>
   </form>
 </div>
 
@@ -34,7 +34,7 @@
       <label for="login-password">Password</label>
       <input type="password" ng-model="signup.password" class="form-control" id="login-password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="signin">Submit</button>
   </form>
 </div>
 
