--- a/browser/js/cart/cart-view.html
+++ b/browser/js/cart/cart-view.html
@@ -16,16 +16,16 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="item in cart.items track by $index">
+		<tr class="cart-row" ng-repeat="item in cart.items track by $index">
             <!-- <td><a><span ng-click="remove(item.product._id)" ui-sref="cart"class="glyphicon glyphicon-remove"></span></a></td> -->
             <td><span ng-click="remove(item.product._id)" class="glyphicon glyphicon-remove remove-btn"></span></td>
 
             <td><a ui-sref="productDetail({ id: item.product._id })">{{item.product.name}}</a></td>
             
             <td>{{item.product.type}}</td>
-            <td><span class="glyphicon glyphicon-minus"   ng-click="update(item.product._id, -1)"></span>
+            <td><span class="glyphicon glyphicon-minus cart-minus"   ng-click="update(item.product._id, -1)"></span>
             	&nbsp;&nbsp;{{item.quantity | number}}&nbsp;&nbsp;
-                <span class="glyphicon glyphicon-plus" ng-click="update(item.product._id, 1)"></span></td>
+                <span class="glyphicon glyphicon-plus cart-plus" ng-click="update(item.product._id, 1)"></span></td>
             <td>{{ item.unitPrice | currency}}</td>
             <td>{{ item.unitPrice * item.quantity | currency }}</td>
         </tr>
