--- a/browser/js/accountmgmt/order.view.directive.html
+++ b/browser/js/accountmgmt/order.view.directive.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <h2>Order</h2>
+    <h2>Order {{ order._id }}</h2>
     Order Status (as of {{ order.updated | date }}): {{ order.status | uppercase }}
     <br>
     <cancel-order order=order></cancel-order>
@@ -8,7 +8,7 @@
     <br> Total Cost: {{ order.total | currency }}
   </div>
 
-  <ul class="list-group">
+  <ul class="list-group user-info">
     <li class="list-group-item" ng-repeat="item in order.items">
       <order-item-detail item=item></order-item-detail>
     </li>
